# diploma

./: pyproject.toml  tmp_block.txt
app/: fake.py  main.py  make_jsonl_from_fake.py  make_jsonl_from_feedback.py  metrics.py  models.py  settings.py  storage.py  train_hf_ner.py
app/data/feedback/: candidates.jsonl
app/data/hf_ner/ru/: adapter_config.json
app/data/hf_ner/ru/checkpoint-4/: rng_state.pth  scheduler.pt  trainer_state.json
app/data/hf_ner/ru/checkpoint-500/: rng_state.pth  scheduler.pt  trainer_state.json
app/data/hf_ner/ru/checkpoint-6/: README.md  adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
app/data/hf_ner/ru/checkpoint-750/: adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
app/data/labels/: dev.jsonl  train.jsonl
app/pd_redactor_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
app/pipeline/: cleanse_docx.py  detect.py  feedback.py  hf_ner.py  redact_pdf.py  spacy_train.py  train.py  utils.py
app/static/: index.html
data/feedback/: candidates.jsonl  candidates_clean.jsonl
data/models/ru/: meta.json
data/models/ru/ner/: moves
