[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
    name = "pd-redactor-service"
    version = "0.1.0"
    description = "Web API для автоматического скрытия персональных данных в PDF/DOCX"
    authors = [{name = "ВКР", email = "example@example.com"}]
    readme = "README.md"
    requires-python = ">=3.10"
    dependencies = [
    "fastapi==0.115.4",
    "uvicorn[standard]==0.31.1",
    "python-multipart==0.0.9",
    "pydantic-settings==2.6.1",
    "pydantic==2.9.2",
    "presidio-analyzer==2.2.353",
    "presidio-anonymizer==2.2.353",
    "spacy==3.7.5",
    "ru-core-news-md@https://github.com/explosion/spacy-models/releases/download/ru_core_news_md-3.7.0/ru_core_news_md-3.7.0-py3-none-any.whl",
    "en-core-web-md@https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.1/en_core_web_md-3.7.1-py3-none-any.whl",
    "PyMuPDF==1.24.10",
    "pdfminer.six==20240706",
    "python-docx==1.1.2",
    "lxml==5.3.0",
    "Pillow==10.4.0",
    "regex==2024.9.11",
]


[tool.setuptools.packages.find]
where = ["app"]